==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

Oct 26 2016 (bgol, horizon branch):
. New ship "Beluga Liner".
. Data update from maddavo.
. Even with zero demandunits the station does pay the price.

Oct 14 2016 (bgol, horizon branch):
. Data update from maddavo.
. Updated EDAPI plugin to version 3.7.5:
  - Updated shipyard to EDDN v2 schema.
  - Updated outfitting to EDDN v2 schema.
  - Updated commodity to EDDN v3 schema.

Jul 08 2016 (bgol, horizon branch):
. Updated EDAPI plugin to version 3.7.4:
  - Let the user know about the API response.
  - New option "test=[FILENAME]" to test the plugin.
  - New option "warn" to ask the user if the API response differ from
    the database entry of the station.
    Default behavior is now to just warn the user know about it.

Jul 07 2016 (bgol, horizon branch):
. Updated EDAPI plugin to version 3.7.3:
  - Reworked station data handling
  - Reworked consistency checks for API <-> DB diffs

Jul 06 2016 (bgol, horizon branch):
. Data update from maddavo.
. New EDCD plugin which also can update the items.
. Updated EDAPI plugin to version 3.7.2:
  - Call new EDCD plugin for option 'edcd'
  - Reworked demmand/supply handling
  - Added consistency checks for "what" to import compared to what the
    station should offer.

Jul 05 2016 (bgol, horizon branch):
. Added category and suppressed to RareItem and updated data.
. Show "Category/Itemname" if more detail is requested for the "rares" command.

Jul 03 2016 (bgol, horizon branch):
. New import plugin "netLog" which parses the netLog files and add new
  systems to the database (see README for description).

Jul 02 2016 (bgol, horizon branch):
. Merged changes from devel branch into horizon (see below).
. Data update from maddavo.