@@ -2,6 +2,10 @@
 TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
+Feb 17 2017 (bgol, horizon branch):
+. Updated EDAPI plugin to version 4.0.0
+  - Login process reworked.
+
 Oct 26 2016 (bgol, horizon branch):
 . New ship "Beluga Liner".
 . Data update from maddavo.
